Add Franch, German, Spain, Italian, other messages

--- a/src/main/resources/ParameterBundle.properties
+++ b/src/main/resources/ParameterBundle.properties
@@ -8,7 +8,7 @@ mileage.distance-per-volume=Fuel efficiency is expressed as the distance travele
 mileage.volume-per-distance=Fuel efficiency is expressed as the amount of fuel consumed per 100 units of distance
 exclusive.two-mileages-simultaneously=Fuel efficiency by distance or fuel consumption are mutually exclusive
 required.any-mileage=Fuel efficiency must be specified
-round.four=Round to two, three, four digits or a whole number
+round.four=Round to four digits
 round.three=Round to three digits
 round.two=Round to two digits
 round.zero=Round to a whole number
