--- a/src/main/resources/CommandLineBundle.properties
+++ b/src/main/resources/CommandLineBundle.properties
@@ -3,6 +3,7 @@
 # to convert a native language to ASCII
 distance=Distance of the ride, kilometers or miles
 help=Show this message
+version=Show version
 price=Fuel price
 mileage.distance-per-volume=Fuel efficiency is expressed as the distance traveled per unit of fuel consumed
 mileage.volume-per-distance=Fuel efficiency is expressed as the amount of fuel consumed per 100 units of distance
@@ -12,3 +13,4 @@ round.four=Round to four digits
 round.three=Round to three digits
 round.two=Round to two digits
 round.zero=Round to a whole number
+value.non-positive=Must be a positive value, but got %s
