--- a/src/main/resources/CommandLineBundle.properties
+++ b/src/main/resources/CommandLineBundle.properties
@@ -3,12 +3,14 @@
 # to convert a native language to ASCII
 distance=Distance of the ride, kilometers or miles
 help=Show this message
+version=Show version
 price=Fuel price
 mileage.distance-per-volume=Fuel efficiency is expressed as the distance traveled per unit of fuel consumed
 mileage.volume-per-distance=Fuel efficiency is expressed as the amount of fuel consumed per 100 units of distance
 exclusive.two-mileages-simultaneously=Fuel efficiency by distance or fuel consumption are mutually exclusive
 required.any-mileage=Fuel efficiency must be specified
-round.four=Round to two, three, four digits or a whole number
+round.four=Round to four digits
 round.three=Round to three digits
 round.two=Round to two digits
 round.zero=Round to a whole number
+value.non-positive=Must be a positive value, but got %s
