--- a/pom.xml
+++ b/pom.xml
@@ -412,5 +412,5 @@
     <url>https://gitlab.com/ride-cost/ride-cost-cli</url>
   </scm>
   <url>https://gitlab.com/ride-cost/ride-cost-cli</url>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.0</version>
 </project>
