--- a/pom.xml
+++ b/pom.xml
@@ -422,5 +422,5 @@
     <url>https://gitlab.com/ride-cost/ride-cost-cli</url>
   </scm>
   <url>https://gitlab.com/ride-cost/ride-cost-cli</url>
-  <version>1.0.0</version>
+  <version>1.1.0-SNAPSHOT</version>
 </project>
