--- a/pom.xml
+++ b/pom.xml
@@ -152,6 +152,7 @@
           </properties>
           <reuseForks>false</reuseForks>
           <systemPropertyVariables>
+            <java.util.logging.config.file>${project.basedir}/src/test/resources/test-logging.properties</java.util.logging.config.file>
             <maven.project.version>${project.version}</maven.project.version>
           </systemPropertyVariables>
         </configuration>
@@ -256,6 +257,15 @@
       <scope>test</scope>
       <version>2.0.2</version>
     </dependency>
+    <!--
+    jUnit Pioneer 2.*.* hasn't been compatible with Java 17 and jUnit 6 yet.
+    <dependency>
+      <groupId>org.junit-pioneer</groupId>
+      <artifactId>junit-pioneer</artifactId>
+      <scope>test</scope>
+      <version>2.3.0</version>
+    </dependency>
+    -->
     <dependency>
       <artifactId>mockito-core</artifactId>
       <groupId>org.mockito</groupId>
@@ -412,5 +422,5 @@
     <url>https://gitlab.com/ride-cost/ride-cost-cli</url>
   </scm>
   <url>https://gitlab.com/ride-cost/ride-cost-cli</url>
-  <version>1.0.0</version>
+  <version>1.1.0-SNAPSHOT</version>
 </project>
