--- a/pom.xml
+++ b/pom.xml
@@ -388,7 +388,10 @@
                   <inceptionYear>${project.inceptionYear}</inceptionYear>
                   <!-- @formatter:off -->
                   <licenseMerges>
+                    <licenseMerge>Apache License version 2.0|The Apache Software License, version 2.0|The Apache Software License, Version 2.0|Apache 2</licenseMerge>
+                    <!--
                     <licenseMerge>Apache License version 2.0|The Apache Software License, Version 2.0|The Apache License, Version 2.0|Apache License, Version 2.0|Apache-2.0|Apache 2</licenseMerge>
+                    -->
                   </licenseMerges>
                   <licenseName>apache_v2</licenseName>
                   <!-- @formatter:on -->
