--- a/src/main/resources/CommandLineBundle.properties
+++ b/src/main/resources/CommandLineBundle.properties
@@ -3,31 +3,31 @@
 # to convert a native language to ASCII
 #
 # Parameters and options
-distance=Distance(s) of the ride, kilometers or miles
-price=Fuel price
-mileage.distance-per-volume=Fuel efficiency is expressed as the distance traveled per unit of fuel consumed
-mileage.volume-per-distance=Fuel efficiency is expressed as the amount of fuel consumed per 100 units of distance
-round.four=Round to four digits
-round.three=Round to three digits
-round.two=Round to two digits
-round.zero=Round to a whole number
-state.save=Save price, fuel efficiency and rounding for future use.
+distance = Distance(s) of the ride, kilometers or miles
+price = Fuel price
+mileage.distance-per-volume = Fuel economy, mileage per unit of fuel
+mileage.volume-per-distance = Fuel economy, fuel consumption per 100 units of distance
+round.four = Round to four digits
+round.three = Round to three digits
+round.two = Round to two digits
+round.zero = Round to a whole number
+state.save = Save price, fuel economy and rounding for future use
 # Validation
-value.non-positive=Must be a positive value, but got %s
-exclusive.two-mileages-simultaneously=Fuel efficiency by distance or fuel consumption are mutually exclusive
-required.any-mileage=Fuel efficiency must be specified
-required.distance=Distance must be specified
-required.price=Price must be specified
+value.non-positive = Must be a positive value, but got %s
+exclusive.two-mileages-simultaneously = Fuel economy by distance or fuel consumption are mutually exclusive
+required.any-mileage = Fuel economy must be specified
+required.distance = Distance must be specified
+required.price = Price must be specified
 # Help and version
-help=Show this message
-version=Show version
+help = Show this message
+version = Show version
 # Usage
 # Leading whitespace is removed by default.
 # Start with \u0020 to keep the leading whitespace.
 usage.header   = Mileage-Based Ride Cost Command-Line Tool.%n
 usage.descriptionHeading = %n
-usage.description = Calculates the estimated cost of a trip based on fuel efficiency, fuel price, and travel distance.%n
-usage.description.0 = You could save price and fuel efficiency for future use.%n
+usage.description = Calculates the estimated cost of a trip based on fuel economy, fuel price, and travel distance.%n
+usage.description.0 = You could save price and fuel economy for future use.%n
 usage.synopsisHeading = Usage:%n\u0020
 usage.customSynopsis = @|bold ridecost|@ [@|yellow -0234hsV|@] @|yellow -p|@=@|italic PRICE|@ (@|yellow -m|@=@|italic RATIO|@ | @|yellow -l|@=@|italic RATIO|@) @|yellow DISTANCE|@
 usage.parameterListHeading = Parameters:%n
