--- a/pom.xml
+++ b/pom.xml
@@ -143,6 +143,10 @@
           <argLine>@{argLine} -javaagent:${org.mockito:mockito-core:jar}
             -javaagent:${com.ginsberg:junit5-system-exit:jar}
           </argLine>
+          <environmentVariables>
+            <RIDECOST_STATE>src/test/resources/empty.properties</RIDECOST_STATE>
+            <RIDECOST_STATE_DOESNT_EXIST>ridecost.properties</RIDECOST_STATE_DOESNT_EXIST>
+          </environmentVariables>
           <forkCount>1</forkCount>
           <includes>
             <include>**/*Test.java</include>
@@ -151,10 +155,6 @@
             <groups>slow</groups>
           </properties>
           <reuseForks>false</reuseForks>
-          <systemPropertyVariables>
-            <java.util.logging.config.file>${project.basedir}/src/test/resources/test-logging.properties</java.util.logging.config.file>
-            <maven.project.version>${project.version}</maven.project.version>
-          </systemPropertyVariables>
         </configuration>
         <executions>
           <execution>
@@ -307,7 +307,25 @@
     <dependency>
       <artifactId>ride-cost-estimator</artifactId>
       <groupId>io.gitlab.vitalijr2.ridecost</groupId>
-      <version>1.0.0</version>
+      <version>1.1.1</version>
+    </dependency>
+    <dependency>
+      <artifactId>slf4j-api</artifactId>
+      <groupId>org.slf4j</groupId>
+      <optional>true</optional>
+      <version>${slf4j.version}</version>
+    </dependency>
+    <dependency>
+      <artifactId>slf4j-jdk-platform-logging</artifactId>
+      <groupId>org.slf4j</groupId>
+      <optional>true</optional>
+      <version>${slf4j.version}</version>
+    </dependency>
+    <dependency>
+      <artifactId>slf4j-simple</artifactId>
+      <groupId>org.slf4j</groupId>
+      <optional>true</optional>
+      <version>${slf4j.version}</version>
     </dependency>
   </dependencies>
   <description>Mileage-Based Ride Cost Command-Line Tool</description>
@@ -419,11 +437,13 @@
     </profile>
   </profiles>
   <properties>
+    <command.name>ridecost</command.name>
     <java.version>17</java.version>
     <junit.version>6.0.1</junit.version>
-    <mock-loggers.version>2.0.0</mock-loggers.version>
+    <mock-loggers.version>2.0.1</mock-loggers.version>
     <mockito.version>5.20.0</mockito.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <slf4j.version>2.0.17</slf4j.version>
   </properties>
   <scm>
     <connection>scm:git:https://gitlab.com/ride-cost/ride-cost-cli.git</connection>
@@ -431,5 +451,5 @@
     <url>https://gitlab.com/ride-cost/ride-cost-cli</url>
   </scm>
   <url>https://gitlab.com/ride-cost/ride-cost-cli</url>
-  <version>1.1.0</version>
+  <version>1.1.1-SNAPSHOT</version>
 </project>
