--- a/pom.xml
+++ b/pom.xml
@@ -451,5 +451,5 @@
     <url>https://gitlab.com/ride-cost/ride-cost-cli</url>
   </scm>
   <url>https://gitlab.com/ride-cost/ride-cost-cli</url>
-  <version>1.1.1</version>
+  <version>1.1.2-SNAPSHOT</version>
 </project>
